# Disaster-Alert-Notification-System

./: .gitignore  AlertLogger.h  AlertProtocol.h  CMakeLists.txt  README.md  Utils.h  admin.cpp  client.cpp  sample_alerts.txt  server.cpp
